--- a/build.gradle
+++ b/build.gradle
@@ -21,13 +21,19 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.projectlombok:lombok:1.18.30'
+
 	annotationProcessor 'org.projectlombok:lombok:1.18.30'
+
 	runtimeOnly 'mysql:mysql-connector-java:8.0.33'
+
 	implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
 	implementation 'org.glassfish:jakarta.el:4.0.2'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
-	testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'io.rest-assured:rest-assured:5.3.0'
+	testImplementation 'io.rest-assured:spring-mock-mvc:5.3.0'
+	testImplementation 'org.hamcrest:hamcrest:2.2'
 }
 
 tasks.named('test') {
